// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cases component should render a error message when a person is restricted 1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <div>
        <h3
          class="govuk-fieldset__legend--m govuk-custom-text-color"
        >
          RECORDS HISTORY
        </h3>
        <span
          class="govuk-body"
        >
          Linked files are read only
        </span>
      </div>
    </div>
    <hr
      class="govuk-divider"
    />
    <div
      aria-labelledby="error-summary-title"
      class="govuk-error-summary"
      data-module="govuk-error-summary"
      role="complementary"
      tabindex="-1"
    >
      <h2
        class="govuk-error-summary__title"
        id="error-summary-title"
      >
        RESTRICTED
      </h2>
      <div
        class="govuk-error-summary__body"
      >
        Some details for this person are restricted due to your permissions.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cases component should render no records  1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <div>
        <h3
          class="govuk-fieldset__legend--m govuk-custom-text-color"
        >
          RECORDS HISTORY
        </h3>
        <span
          class="govuk-body"
        >
          Linked files are read only
        </span>
      </div>
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        Add a new record
      </button>
    </div>
    <hr
      class="govuk-divider"
    />
    <p
      class="govuk-body govuk-!-margin-top-5"
    >
      Records not found
    </p>
    <div
      style="height: 50px; text-align: center;"
    >
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        load more
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cases component should render records properly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <div>
        <h3
          class="govuk-fieldset__legend--m govuk-custom-text-color"
        >
          RECORDS HISTORY
        </h3>
        <span
          class="govuk-body"
        >
          Linked files are read only
        </span>
      </div>
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        Add a new record
      </button>
    </div>
    <hr
      class="govuk-divider"
    />
    <table
      class="govuk-table"
    >
      <thead
        class="govuk-table__head"
      >
        <tr
          class="govuk-table__row"
        >
          <th
            class="govuk-table__header"
            scope="col"
          >
            Date created 
          </th>
          <th
            class="govuk-table__header"
            scope="col"
          >
            Record type 
          </th>
          <th
            class="govuk-table__header"
            scope="col"
          >
            Created by 
          </th>
          <th
            class="govuk-table__header"
            scope="col"
          >
            Action 
          </th>
        </tr>
      </thead>
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell govuk--timestamp"
            style="width: 120px;"
          >
            25 Oct 2020
          </td>
          <td
            class="govuk-table__cell"
          >
            foorm
          </td>
          <td
            class="govuk-table__cell"
          >
            Fname.Lname@hackney.gov.uk
          </td>
          <td
            class="govuk-table__cell govuk-table__cell--numeric"
            style="width: 50px; text-align: center;"
          >
            <a
              class="govuk-link lbh-link"
              href="https://foo.bar"
              rel="noreferrer noopener"
              target="_blank"
            >
              View
            </a>
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell govuk--timestamp"
            style="width: 120px;"
          >
            25 Oct 2020
          </td>
          <td
            class="govuk-table__cell"
          >
            Worker allocated
          </td>
          <td
            class="govuk-table__cell"
          >
            Fname.Lname@hackney.gov.uk
          </td>
          <td
            class="govuk-table__cell govuk-table__cell--numeric"
            style="width: 50px; text-align: center;"
          >
            <a
              class="govuk-link lbh-link"
              href="/people/123/allocations/321?recordId=2"
            >
              View
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      style="height: 50px; text-align: center;"
    >
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        load more
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cases component should work properly if person is restricted but user.hasUnrestrictedPermissions 1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <div>
        <h3
          class="govuk-fieldset__legend--m govuk-custom-text-color"
        >
          RECORDS HISTORY
        </h3>
        <span
          class="govuk-body"
        >
          Linked files are read only
        </span>
      </div>
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        Add a new record
      </button>
    </div>
    <hr
      class="govuk-divider"
    />
    <p
      class="govuk-body govuk-!-margin-top-5"
    >
      Records not found
    </p>
    <div
      style="height: 50px; text-align: center;"
    >
      <button
        class="lbh-button govuk-button"
        data-module="govuk-button"
      >
        load more
      </button>
    </div>
  </div>
</DocumentFragment>
`;
